# traffic-django

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
backend/: django_log.txt
backend/backend/: settings.py  urls.py
backend/data/: Intersection_loc.kml  Processed_Vehicle_Count_Simon_Bolivar_Avenue.xlsx  Vehicle Count Simon Bolivar Avenue.xlsx  test.ipynb  ~$Processed_Vehicle_Count_Simon_Bolivar_Avenue.xlsx
backend/data/accident/: reporte_incidencias 23.04.2025.xls
backend/traffic/: admin.py  models.py  serializers.py  settings.py  urls.py  views.py
backend/traffic/management/commands/: calculate_total_traffic.py  calculate_total_volume.py  cleanup_intersections.py  fix_intersection_names.py  import_all_traffic_data.py  import_incidents.py  import_kml.py  import_simon_bolivar_data.py  import_single_volume.py.py  import_traffic.py  import_volume_from_excel.py
backend/traffic/migrations/: 0001_initial.py  0002_totaltrafficvolume.py  0003_incident.py  0004_incident_intersection.py
backend/traffic/utils/: kml_parser.py
csv_files/: HISTOGRAM - 4.csv
database_data/: README.md  incident_data.json
